RESOLVED FIXED35815
Animation fill mode breaks windows tests
https://bugs.webkit.org/show_bug.cgi?id=35815
Summary Animation fill mode breaks windows tests
Dean Jackson
Reported 2010-03-05 15:11:25 PST
The bitfield for fill mode is too small. Make it unsigned, larger, and move the enum to RenderStyleConstants.h.
Attachments
windows patch and test updates (11.34 KB, patch)
2010-03-05 16:08 PST, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2010-03-05 16:08:13 PST
Created attachment 50137 [details] windows patch and test updates
WebKit Review Bot
Comment 2 2010-03-05 16:11:50 PST
Attachment 50137 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/animation/Animation.h:101: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2010-03-05 16:15:59 PST
Comment on attachment 50137 [details] windows patch and test updates > diff --git a/WebCore/platform/animation/Animation.h b/WebCore/platform/animation/Animation.h > - AnimationFillMode m_fillMode : 2; > + unsigned m_fillMode : 3; I'm pretty sure you only need 2 bits here. r=me
Dean Jackson
Comment 4 2010-03-05 16:21:56 PST
changed :3 to :2 Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/animations/fill-mode-transform-expected.txt M LayoutTests/animations/fill-mode-transform.html M LayoutTests/platform/mac-leopard/Skipped M LayoutTests/platform/mac-snowleopard/Skipped M WebCore/ChangeLog M WebCore/css/CSSComputedStyleDeclaration.cpp M WebCore/css/CSSStyleSelector.cpp M WebCore/platform/animation/Animation.h M WebCore/platform/graphics/mac/GraphicsLayerCA.mm M WebCore/rendering/style/RenderStyleConstants.h Committed r55601
Note You need to log in before you can comment on or make changes to this bug.