2010-03-05  Dean Jackson  <dino@apple.com>

Reviewed by NOBODY (OOPS!).

        https://bugs.webkit.org/show_bug.cgi?id=35815
        Animation Fill Modes fail on Windows

        * css/CSSComputedStyleDeclaration.cpp:
        * css/CSSStyleSelector.cpp:
        * platform/graphics/mac/GraphicsLayerCA.mm:
            - use new enum value
        * platform/animation/Animation.h:
            - change bitfield type
        * rendering/style/RenderStyleConstants.h:
            - add new enum for fill mode

Canonical link: https://commits.webkit.org/46898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55601 268f45cc-cd09-0410-ab3c-d52691b4dbfc