WebCore/rendering/style/RenderStyleConstants.h
@@ -293,6 +293,8 @@ enum StyleContentType {
 
 enum EBorderFit { BorderFitBorder, BorderFitLines };
 
+enum EAnimationFillMode { AnimationFillModeNone, AnimationFillModeForwards, AnimationFillModeBackwards, AnimationFillModeBoth };
+
 enum EAnimPlayState {
     AnimPlayStatePlaying = 0x0,
     AnimPlayStatePaused = 0x1
